--- a/force-app/main/default/classes/AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/AddPatientByPIRemote.cls
@@ -15,6 +15,7 @@ public without sharing class AddPatientByPIRemote {
         @AuraEnabled public Participant__c participantRecord;
         @AuraEnabled public Participant_Enrollment__c peRecord;
         @AuraEnabled public String participantState;
+        @AuraEnabled public String participantPhoneType;
     }
     
     public class FormData {
@@ -110,6 +111,7 @@ public without sharing class AddPatientByPIRemote {
         RecordsData data = new RecordsData();
         data.participantRecord = participantRecord;
         data.participantState = participantRecord.Mailing_State_Code__c;
+        data.participantPhoneType = participantRecord.Phone_Type__c;
         data.peRecord = per;
         return data;
     }
