--- a/force-app/main/default/classes/ParticipantDeduplicationController.cls
+++ b/force-app/main/default/classes/ParticipantDeduplicationController.cls
@@ -126,7 +126,7 @@ public without sharing class ParticipantDeduplicationController {
             Secondary_Source__c         = referralRecord.Data_Source__c,
             Gender__c                   = referralRecord.sex__c
         );
-         newParticipant.Birth_Year__c = !String.isEmpty(newParticipant.Date_of_Birth__c) ? newParticipant.Date_of_Birth__c.substring(0,4) : '';
+         newParticipant.Birth_Year__c = referralRecord.BirthYear__c;
          if(referralRecord.BirthDate__c != null && referralRecord.BirthDate__c.length() == 10){
              newParticipant.Date_of_Birth__c = referralRecord.BirthDate__c.substring(6) + '-' + referralRecord.BirthDate__c.substring(0,2) + referralRecord.BirthDate__c.substring(3,5);
          }
