Fixed Unit Test

--- a/force-app/main/tests/classes/Test_IntegrationReferralTrigger.cls
+++ b/force-app/main/tests/classes/Test_IntegrationReferralTrigger.cls
@@ -127,7 +127,7 @@ private class Test_IntegrationReferralTrigger {
             phone__c = '12357890',
             protocolId__c = 'tt123456789',
             siteSelected__c = '_',
-            Address_State__c = 'NY',
+            Address_State__c = 'New York',
             referralID__c = '453453',
             Address_ZipCode__c = '34545', 
             Address_Country__c = 'US', 
@@ -147,7 +147,7 @@ private class Test_IntegrationReferralTrigger {
             phone__c = '123578910',
             protocolId__c = 'tt123456789',
             siteSelected__c = '_',
-            Address_State__c = 'NY',
+            Address_State__c = 'New York',
             referralID__c = '453453',
             Address_ZipCode__c = '34545', 
             Address_Country__c = 'US', 
@@ -183,7 +183,7 @@ private class Test_IntegrationReferralTrigger {
             protocolId__c = 'tt123456789',
             siteSelected__c = '_',
             birthYear__c = '1982',
-            Address_State__c = 'NY',
+            Address_State__c = 'New York',
             referralID__c = '453453',
             Address_ZipCode__c = '34545', 
             Address_Country__c = 'US', 
@@ -204,7 +204,7 @@ private class Test_IntegrationReferralTrigger {
             protocolId__c = 'tt123456789',
             siteSelected__c = '_',
             birthYear__c = '1982',
-            Address_State__c = 'NY',
+            Address_State__c = 'New York',
             referralID__c = '453453',
             Address_ZipCode__c = '34545', 
             Address_Country__c = 'US', 
@@ -224,11 +224,12 @@ private class Test_IntegrationReferralTrigger {
         Integration_Patient_Referral__c testRecord = new Integration_Patient_Referral__c(
             firstName__c = 'PI',
             lastName__c = 'PI',
+            birthYear__c = '2018',
             email__c = 'pi@emil.com',
             phone__c = '12357890',
             protocolId__c = 'tt123456789',
             siteSelected__c = '_',
-            Address_State__c = 'NY',
+            Address_State__c = 'New York',
             referralID__c = '453453',
             Address_ZipCode__c = '34545', 
             Address_Country__c = 'US', 
