--- a/force-app/main/default/classes/RRLoginRemote.cls
+++ b/force-app/main/default/classes/RRLoginRemote.cls
@@ -12,7 +12,38 @@ global without sharing class RRLoginRemote {
             return null;
         }
         catch (Exception ex) {
+            List<User> u = [SELECT Id, TimeZoneSidKey FROM User WHERE Username = :username];
+            if(!u.isEmpty()){
+                UserLogin ul = [SELECT IsPasswordLocked FROM UserLogin WHERE UserId = :u[0].Id];
+                List<LoginHistory> history = [SELECT Id, Status, LoginTime FROM LoginHistory WHERE UserId = :u[0].Id ORDER BY LoginTime DESC LIMIT 10];
+                if(ul.IsPasswordLocked){
+                    DateTime lockoutTime = null;
+                    for( LoginHistory loginAttempt : history){
+                        if(lockoutTime == null && loginAttempt.Status == 'Invalid Password'){
+                            lockoutTime = loginAttempt.LoginTime;
+                        }
+
+                    }
+                    return Label.PG_Login_Lockout_Error_Message.replace('##LockoutEndTime',lockoutTime.addMinutes(16).format('hh:mm a', u[0].TimeZoneSidKey));
+
+                }
+                else if(!history.isEmpty() && history[0].Status == 'Invalid Password'){
+                    Integer attempts = 0;
+                    while (attempts<history.size() && history[attempts].Status == 'Invalid Password'){
+                        attempts++;
+                    }
+                    String forgotPasswordLink = '<a class="no-float" href="'+getForgotPasswordUrl() + '">'+Label.PG_Login_L_here_link + '</a>';
+                    return Label.PG_Login_Wrong_Password_Error_Message.replace('##AttemptsLeft',String.valueOf(5-attempts)).replace('##ForgotPasswordLink',forgotPasswordLink);
+                }
+                else{
+                    return ex.getMessage();
+                }
+
+            }
+            else{
             return ex.getMessage();
+        }
+
         }
     }
 
