--- a/force-app/main/default/classes/SubscribeToReferralNetworkRemote.cls
+++ b/force-app/main/default/classes/SubscribeToReferralNetworkRemote.cls
@@ -107,12 +107,13 @@ public without sharing class SubscribeToReferralNetworkRemote {
                         ORDER BY Name ASC
                 ];
             } else if (currType == Therapeutic_Area__c.getSObjectType()) {
-                foundRecords = [
+                TherapeuticAreaService taService = (TherapeuticAreaService) ClassFactory.newInstance(TherapeuticAreaService.class);
+                foundRecords = taService.getTherapeuticAreas(searchTerm);/*[
                         SELECT Id, Name
                         FROM Therapeutic_Area__c
                         WHERE Name LIKE :searchTerm
                         ORDER BY Name ASC
-                ];
+                ];*/
             }
             TranslateHelper.translate(foundRecords);
 
