--- a/force-app/main/default/classes/SitesSearchRemote.cls
+++ b/force-app/main/default/classes/SitesSearchRemote.cls
@@ -30,11 +30,11 @@ public without sharing class SitesSearchRemote {
         public String State;
 
         public MapLocation(Study_Site__c site){
-            Country = site.Principal_Investigator__r.Account.BillingCountry;
-            City = site.Principal_Investigator__r.Account.BillingCity;
-            Street = site.Principal_Investigator__r.Account.BillingStreet;
-            PostalCode = site.Principal_Investigator__r.Account.BillingPostalCode;
-            State = site.Principal_Investigator__r.Account.BillingStateCode;
+            Country = site.Site__r.BillingCountry;
+            City = site.Site__r.BillingCity;
+            Street = site.Site__r.BillingStreet;
+            PostalCode = site.Site__r.BillingPostalCode;
+            State = site.Site__r.BillingStateCode;
         }
     }
 
