--- a/force-app/main/scheduled-batch/classes/Batch_IntegrationVisitProcess.cls
+++ b/force-app/main/scheduled-batch/classes/Batch_IntegrationVisitProcess.cls
@@ -4,8 +4,8 @@
 
 public without sharing class Batch_IntegrationVisitProcess extends Batch_ScheduledAbstract{
     
-    public Iterable<SObject> start(Database.BatchableContext bc) {
-        return [
+    public Database.QueryLocator start(Database.BatchableContext bc) {
+        return Database.getQueryLocator([
                 SELECT
                         CreatedById,
                         CreatedDate,
@@ -25,7 +25,8 @@ public without sharing class Batch_IntegrationVisitProcess extends Batch_Schedul
                         VISIT__c,
                         VISITNUM__c,
                         Work_Status__c
-                FROM Integration_Visit__c WHERE Processed__c = FALSE];
+                FROM Integration_Visit__c WHERE Processed__c = FALSE
+        ]);
     }
     
     public void execute(Database.BatchableContext param1, List<SObject> scope) {
